<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weather App</string>
    <string name="currentTemperature">18</string>
    <string name="currentCityName">UFA</string>
    <string name="currentDay">MONDAY</string>
    <string name="currentDate">AUG 30</string>
    <string name="currentTime">12:30</string>
    <string name="hintSearchCity">City</string>
    <string name="weatherIcon">Weather icon</string>

    <string name="by_days">BY DAYS</string>
    <string name="by_hours">BY HOURS</string>

    <string name= "internetConnection">Internet connection</string>
    <string name="noInternet">Could not connect to internet!</string>
    <string name="okInternet">Connection established!</string>

    <!-- Parameters Name -->
    <string name="humidityName">Humidity, </string>
    <string name="pressureName">Pressure, </string>
    <string name="windSpeedName">Wind speed, </string>

    <!-- EU Strings -->
    <string name="celsius" translatable="false">\u2103</string>
    <string name="fahrenheit" translatable="false">\u2109</string>
    <string name="humidityEU" translatable="false">\uFF05</string>
    <string name="windEUOne">m/s</string>
    <string name="windEUTwo">m.p.h</string>
    <string name="pressEUOne">mmHg</string>
    <string name="pressEUTwo">hPa</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="menu_select_city">Select city</string>
    <string name="menu_help">Help</string>
    <string name="menu_home">Home</string>
    <string name="menu_location">Location</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_google">Google search</string>
    <string name="menu_send_push">Send push message</string>
    <string name="menu_geomap">Geolocation</string>
    <string name="menu_members">Members</string>

    <string name="settings_NightMode">Night Mode</string>
    <string name="settings_Notice">Notifications</string>
    <string name="settings_EUText">"Units of measurement"</string>
    <string name="settings_NoticeText">"These can be reports of sudden changes in the weather or warnings of the Ministry of Emergencies"</string>

    <string name="now">now</string>
    <string name="feeling">Feels like:</string>
    <string name="provider">Data provided by OpenWeather</string>

    <string name="nav_header_title" translatable="false">Weather App</string>
    <string name="nav_header_subtitle" translatable="false">magzyumov.rr@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- Context menu -->
    <string name="remove">Remove</string>
    <string name="clear">Clear all</string>

    <!-- Alert strings -->
    <string name="messageFromServer">Server response</string>
    <string name="badResponse">Request Execution Error</string>
    <string name="cityNotFound">City not found</string>
    <string name="unknownCity">Unknown city</string>
    <string name="invalidKey">Invalid API key!</string>
    <string name="loading">Loading...</string>
    <string name="ok">ОK</string>
    <string name="no">NO</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="citySearch">City search</string>
    <string name="geoSearch">%s \n\nLatitude: %s \nLongitude: %s\n\nDetermine the weather?</string>
    <string name="locationNotFound">Current location not determined</string>
    <string name="unknownLocation">Unknown location</string>

    <!-- Firebase cloud messaging window -->
    <string name="buttonSend">Send notification</string>
    <string name="labelTitle">Title</string>
    <string name="labelMessage">Message</string>

    <!-- Geomap Fragment Strings -->
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

</resources>