<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_location" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_google"
            android:icon="@drawable/ic_location_searching_black_24dp"
            android:title="@string/menu_google" />

        <item
            android:id="@+id/nav_geomap"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_geomap" />
    </group>

    <group
        android:id="@+id/admin_zone"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send_push"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/menu_send_push" />

        <item
            android:id="@+id/nav_members"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_members" />

    </group>
</menu>


