<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="300"
        android:title="@string/menu_location"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_history"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="300"
        android:title="@string/menu_history"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="300"
        android:title="@string/menu_settings"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>

