<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:tag="settingsFragment"
    tools:context=".Fragments.SettingsFragment">

    <LinearLayout
        style="@style/SettingsMainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNightMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_NightMode"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchEU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/settings_EUText"
                app:showText="true"
                android:textColor="@color/colorBlack"
                android:textOff="@string/metric"
                android:textOn="@string/imperial"
                android:textSize="18sp"
                tools:checked="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:orientation="vertical">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBlack"
                android:text="@string/settings_Notice"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorBlack"
                android:text="@string/settings_NoticeText" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>