<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daily_forecast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_forecast" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hourly_forecast_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_forecast" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="120dp">
        <LinearLayout
            android:id="@+id/windSpeedSeparator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/windSpeedName" />

            <TextView
                android:id="@+id/textViewWindSpeedEUBottom"
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/windEUOne" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/separator_horizontal" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="200dp">
        <LinearLayout
            android:id="@+id/humiditySeparator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/humidityName" />

            <TextView
                android:id="@+id/textViewHumidityEUBottom"
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/humidityEU" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/separator_horizontal" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingTop="280dp">
        <LinearLayout
            android:id="@+id/pressureSeparator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/pressureName" />

            <TextView
                android:id="@+id/textViewPressureEUBottom"
                style="@style/ParameterSeparatorTextStyle"
                android:text="@string/pressEUOne" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/separator_horizontal" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewDetailedData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            app:srcCompat="@drawable/ic_keyboard_arrow_up_black_36dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewByDays"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/by_days"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewByHours"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0.15"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/by_hours"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

</FrameLayout>