<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="0dp"
    android:layout_marginTop="0dp"
    app:cardBackgroundColor="@android:color/background_light"
    app:cardCornerRadius="1dp"
    app:contentPadding="10dp"
    app:cardElevation="90dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDate"
                style="@style/ForecastTextStyle"
                android:text="12 апреля" />

            <ImageView
                android:id="@+id/imageViewWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weatherIcon"
                app:srcCompat="@drawable/w_10d" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTemp"
                    style="@style/ForecastTextStyle"
                    android:text="+20" />

                <TextView
                    android:id="@+id/textViewTempEU"
                    style="@style/ForecastTextStyle"
                    android:text="@string/celsius" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/weatherIcon"
                app:srcCompat="@drawable/ic_wind_dark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWindSpeed"
                    style="@style/ForecastTextStyle"
                    android:text="5" />

                <TextView
                    android:id="@+id/textViewWindSpeedEU"
                    style="@style/ForecastTextStyle"
                    android:text="@string/windEUOne" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/weatherIcon"
                app:srcCompat="@drawable/ic_humidity_dark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHumidity"
                    style="@style/ForecastTextStyle"
                    android:text="39" />

                <TextView
                    android:id="@+id/textViewHumidityEU"
                    style="@style/ForecastTextStyle"
                    android:text="@string/humidityEU" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPressure"
                style="@style/ForecastTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/weatherIcon"
                app:srcCompat="@drawable/ic_pressure_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPressure"
                    style="@style/ForecastTextStyle"
                    android:text="749" />

                <TextView
                    android:id="@+id/textViewPressureEU"
                    style="@style/ForecastTextStyle"
                    android:text="@string/pressEUOne" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>