<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:tag="mainFragment"
    tools:context=".Fragments.MainFragment">

    <ScrollView
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spring_city_dawn_overcast"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewCurrentCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/currentCityName"
                        android:textColor="@color/colorWhite"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/textViewDistrict"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Октябрьский район"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewCurrent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="22"
                            android:textColor="@color/colorWhite"
                            android:textSize="28sp" />

                        <TextView
                            android:id="@+id/textViewCurrentEU"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/celsius"
                            android:textColor="@color/colorWhite"
                            android:textSize="28sp" />

                        <ImageView
                            android:id="@+id/imageViewCurrent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            app:srcCompat="@drawable/day_clear" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textViewWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Пасмурно"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewFeelingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/feeling"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textViewFeelingValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="+15 \u2103"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hourly_forecast_recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/hourly_forecast_item" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/daily_forecast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/daily_forecast_item"/>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/provider"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>